# backchannel_detection

./: .gitmodules  extract.bash  extract_all.bash  prune.py  prune_old_bags.py  test.bash  test.launch
backchannel_detection/: CMakeLists.txt  package.xml
bundler/: CMakeLists.txt  package.xml
bundler/msg/: Bundle.msg
bundler/scripts/: bundle.py
central/: CMakeLists.txt  package.xml
central/launch/: master.launch  predict_backchannels.launch
central/scripts/: go.py
feature_extraction/audio_features/: CMakeLists.txt  package.xml  setup.py
feature_extraction/audio_features/msg/: AudioFeatures.msg
feature_extraction/audio_features/scripts/: features.py
feature_extraction/audio_features/src/audio_features/: __init__.py  compute.py  features.py
feature_extraction/feature_extraction/: CMakeLists.txt  package.xml
model/: CMakeLists.txt  package.xml  setup.py
model/msg/: Backchannel.msg  BackchannelProbability.msg
model/scripts/: dummy_recognizer.py  run_model.py  synthesize.py  tocsv.py
model/src/model/: __init__.py  model.py  utils.py
