<?xml version="1.0"?>
<package format="2">
  <name>backchannel_detection</name>
  <version>0.0.0</version>
  <description>A metapackage for detecting backchannels</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bundler</exec_depend>
  <exec_depend>central</exec_depend>
  <exec_depend>feature_extraction</exec_depend>
  <exec_depend>model</exec_depend>

  <export>
  	<metapackage />
    <architecture_independent />
  </export>
</package>
