<?xml version="1.0"?>
<package format="2">
  <name>bundler</name>
  <version>0.0.0</version>
  <description>The bundler package</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>audio_features</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nod_detection</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>audio_features</exec_depend>
  <exec_depend>grouper</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nod_detection</exec_depend>
  <exec_depend>python-conditional</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy_wrapper</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
