<?xml version="1.0"?>
<package format="2">
  <name>central</name>
  <version>0.0.0</version>
  <description>The central package</description>
  <maintainer email="sean@todo.todo">sean</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
