<?xml version="1.0"?>
<package format="2">
  <name>model</name>
  <version>0.0.0</version>
  <description>A model for detecting backchannels</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bundler</exec_depend>
  <exec_depend>python-conditional</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy_wrapper</exec_depend>

  <export>
  </export>
</package>
