<?xml version="1.0"?>
<package format="2">
  <name>feature_extraction</name>
  <version>0.0.0</version>
  <description>A package for extracting features needed to detect backchannels</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_features</exec_depend>

  <export>
  	<metapackage />
    <architecture_independent />
  </export>
</package>
